# adapt-e2e-core

./: .gitignore  Cargo.toml  NOTICE  PATCH.md  README.md  build.rs  cbindgen.toml  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: CALLER-CONTRACTS.md  PACKAGING.md  SPEC.md  TESTING.md
docs/superpowers/specs/: 2026-07-13-adapt-e2e-core-design.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: ffi_boundary.rs
include/: adapt_e2e_core.h
scripts/: rng_isolation_gate.sh  rv32_baremetal_build.sh
src/: baremetal_rt.rs  ffi.rs  lib.rs  seeded_rng.rs
src/mgmt/: account.rs  bundle.rs  error.rs  mod.rs  pickle.rs  session.rs
tests/: adversarial.rs  boundary_invariants.rs  cross_session.rs  ffi.rs  golden_vectors.rs  interop.rs  proptest_abi.rs  seam_smoke.rs
