[package]
name = "adapt-e2e-core"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Standalone deterministic Double-Ratchet library (pure Rust, C-ABI) over a seed-injected vodozemac fork."
repository = "https://github.com/adapt-toolkit/adapt-e2e-core"
publish = false

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["std"]
# `std` is feature-gated and default-on for native convenience only. The
# `no_std` build (`--no-default-features`) is a first-class CI target (SPEC §9);
# note the vendored vodozemac fork is not yet `no_std` (tracked for milestone M4).
std = []
# Regenerate the committed C header via cbindgen (host tooling only).
generate-header = ["dep:cbindgen"]

[build-dependencies]
# Generates the committed C header from the extern "C" surface (SPEC §1, §2).
# Opt-in via the `generate-header` feature so normal / no_std / rv32 builds do
# not pull cbindgen (its proc-macro deps conflict with `-Zbuild-std`). The header
# is committed; regenerate with `cargo build --features generate-header`.
cbindgen = { version = "0.29", default-features = false, optional = true }

[dependencies]
# Vendored, pinned fork of vodozemac carrying the additive `*_with_rng`
# entropy-injection seam (adapt-toolkit/vodozemac @ feature/with-rng-entropy-injection).
# See PATCH.md for the fork ledger and re-audit baseline.
#
# `default-features = false` drops the OS-RNG `std-rng` feature so the SHIPPED
# library links no `rand`/`getrandom`/`OsRng` — the adapt path uses only the
# injected-entropy `*_with_rng` API (SPEC §7.7 / §9). Tests re-enable `std-rng`
# via the dev-dependency below (they use the default OsRng peer helpers).
vodozemac = { path = "vendor/vodozemac", default-features = false }
# Trait glue for the injected CSPRNG. rand_core 0.10 is the version vodozemac's
# `*_with_rng<R: CryptoRng>` bound resolves to; keep these unified.
rand_core = { version = "0.10", default-features = false }
# Deterministic, no_std-capable ChaCha20 CSPRNG expanded from the 32-byte seed.
rand_chacha = { version = "0.10", default-features = false }
# Non-elidable secret wiping on drop.
zeroize = { version = "1", default-features = false }

[dev-dependencies]
# Re-enable vodozemac's OS-RNG default methods for tests only (the shipped lib
# stays getrandom-free). Feature unification makes `std-rng` active under
# `cargo test`/`cargo bench` but not under `cargo build`.
vodozemac = { path = "vendor/vodozemac", features = ["std-rng"] }
# A second, independent seeded CSPRNG for cross-checking determinism in tests.
rand = { version = "0.10", default-features = false, features = ["std_rng"] }
# The REAL upstream vodozemac from crates.io, as an independent interop oracle
# (SPEC §7.2): our seed-injected fork must be wire-compatible with it. Renamed to
# avoid colliding with the vendored `vodozemac` path dependency.
vodozemac_upstream = { package = "vodozemac", version = "0.10.0" }
# Property-based fuzzing of the C-ABI boundary (SPEC §7.6): malformed input must
# never panic, always a clean error.
proptest = "1"

# 2nd pinned fork (security-backport-only, same discipline as vendor/vodozemac):
# a minimal, behaviour-preserving patch of base64 0.22.1 that implements
# `core::error::Error` unconditionally (== std::error::Error since Rust 1.81), so
# the type impls Error in no_std too — the only remaining hurdle for the
# bare-metal build. See PATCH.md (base64 fork).
[patch.crates-io]
base64 = { path = "vendor/base64" }
